<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sakaiproject.purepoms</groupId>
        <artifactId>sakai-standard-tool</artifactId>
        <version>2.9.0-a01</version>
    </parent>

    <name>Sakai Mock (sakai-mock)</name>
    <groupId>org.sakaiproject.mock</groupId>
    <artifactId>sakai-mock</artifactId>
    <version>2.9.0-a01</version>
    <packaging>jar</packaging>

    <properties>
        <deploy.target />
        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/sakai-mock/${project.version}</url.localsite>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven2-central-repo</id>
            <name>Maven2 Central Repo</name>
            <url>http://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>Sakai Plugin Repo</id>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>sakai-maven2</id>
            <name>Sakai Maven Repository</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sakai-maven2-snapshots</id>
            <name>Sakai Maven Repo Snapshots</name>
            <layout>default</layout>
            <url>http://source.sakaiproject.org/maven2-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>default</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <scm>
        <connection>scm:svn:https://source.sakaiproject.org/svn/sakai-mock/tags/sakai-mock-2.9.0-a01</connection>
        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/sakai-mock/tags/sakai-mock-2.9.0-a01</developerConnection>
        <url>https://source.sakaiproject.org/svn/sakai-mock/tags/sakai-mock-2.9.0-a01</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.sakaiproject.kernel</groupId>
            <artifactId>sakai-kernel-api</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources />
        <testSourceDirectory>src/test/java</testSourceDirectory>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <id>aggregate</id>
                        <configuration>
                            <aggregate>true</aggregate>
                            <source>1.5</source>
                            <encoding>UTF-8</encoding>
                            <links>
                                <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                                <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                            </links>
                            <breakiterator>true</breakiterator>
                            <verbose>false</verbose>
                            <maxmemory>512m</maxmemory>
                            <additionalJOption>
                                -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
                            </additionalJOption>
                        </configuration>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>
